--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"ip":"YTEISAPLPSMP.aternos.me","name":"ONLINEBOT","port":"47022"}
+{"ip":"YTEISAPLPSMP.aternos.me","name":"EISAGAMING","port":"47022"}
